[package]

name = "mozrunner"
version = "0.1.0"
authors = ["Mozilla Tools and Automation <auto-tools@mozilla.com>"]
description = "Library for starting Firefox binaries."
repository = "https://github.com/jgraham/rust_mozrunner"
license = "MPL-2.0"
license-file = "LICENSE"

[dependencies]
log = "0.3.1"
mozprofile = "0.1.0"